@@ -4,15 +4,19 @@ Known problems:
     1. The "_parent" and "_empty" frame targets are not handled correctly
     2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
        This behavior matches that currently used by IE and Navigator.
-    3. The regression test "pseudo-server" do not appear to run properly under JDK 1.4
+    3. The regression test "pseudo-server" does not appear to run properly under JDK 1.4
 
 Limitations:
     1. HttpUnit does not support JavaScript
     2. JDK 1.2 or higher is required
-    3. ServletUnit does not support JSP
 
 
 Revision History:
+10-Jul-2002
+Additions:
+    1. WebResponse and WebCell now support a new method, getImages, which returns an array of objects representing the
+       image tags found.
+
 25-Jun-2002
 Additions:
     1. The HttpUnitOption property 'acceptCookies' now controls whether cookies received from the server will be saved
